# steam-app

./: .gitignore  ASSET_DOWNLOAD.md  BOX64_GRAPHICS_2025_ANALYSIS.md  BUG_REPORT.md  BUILD-STABILITY.md  CLAUDE.md  CODE_REVIEW_PHASE5_FIXES.md  CONTRIBUTING.md  CONTROLLER_SUPPORT_PHASE5_RESEARCH.md  GOOGLE_PLAY_QUALITY_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  JAVA_SETUP_README.md  LICENSE  LOGS_README.txt  NEXT_STEPS.md  OPTIMIZATION_REPORT.md  PHASE6_NAVIGATION_COMPLETE.md  PHASE_4C_COMPLETE_SUMMARY.md  PHASE_5_CONTROLLER_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORING_PHASE5_ADDITIONAL.md  SAMPLE_GAMES.md  SCRIPTS.md  SECURITY.md  SETUP.md  TASK_COMPLETION_REPORT.md  TEST_IMPLEMENTATION_SUMMARY.md  THIRD_PARTY_LICENSES.md  USER_MANUAL.md  WINE_INTEGRATION_COMPLETE.md  WINLATOR_ARCHITECTURE_FINDINGS.md  WINLATOR_INTEGRATION.md  WINLATOR_INTEGRATION_PHASE2_COMPLETE.md  WINLATOR_INTEGRATION_PHASE3_COMPLETE.md  WINLATOR_INTEGRATION_PHASE4A_COMPLETE.md  WINLATOR_INTEGRATION_PHASE4B_RESEARCH.md  WINLATOR_INTEGRATION_STATUS.md  WINLATOR_INTEGRATION_SUMMARY.md  (+28 more)
.claude/: settings.local.json
.claude/commands/: add-dependency.md  debug-build.md  new-screen.md  phase-status.md  review.md
.github/: GITHUB_SETUP_INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/uinput/: uinput_bridge.c  uinput_jni.c
app/src/main/cpp/winlator/: drawable.c  gpu_image.c  native_handle.h  xconnector_epoll.c
docs/: CODE_REVIEW_2025-12-26.md  VERSION_MANAGEMENT.md  download-performance-optimization.md  progress-reporting-improvements.md  proton-10-critical-bugs-verification.md  winetest-improvements.md
gradle/: libs.versions.toml
(+406 files in other folders)
